--- a/metadata.yaml
+++ b/metadata.yaml
@@ -29,6 +29,7 @@ subjects:
 - !lcsh 'Anthony, Susan B. (Susan Brownell), 1820-1906 -- Trials, litigation, etc.'
 - !lcc 'KF'
 - !lcsh 'Women -- Suffrage -- United States'
+- GITenberg
 title: An Account of the Proceedings on the Trial of Susan B. Anthony, on the Charge
   of Illegal Voting, at the Presidential Election in Nov., 1872, and on the Trial
   of Beverly W. Jones, Edwin T. Marsh, and William B. Hall, the Inspectors of Election
